--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,39 @@ body {
     .modal {
         font-size: 23px;
 
-        .modal-title {
-            font-weight: bolder;
-            font-size: 25px;
+        .modal-header,
+        .modal-footer {
+            background-color: pink;
+        }
+
+        .modal-header {
+            border-bottom: 1px solid white;
+
+            .modal-title {
+                font-weight: bolder;
+                font-size: 25px;
+            }
+        }
+
+        .modal-body {
+            background-color: rgba(255, 192, 203, .7);
+
+            .heading {
+                .header {
+                    .image {
+                        img {
+                            width: 100%;
+                            height: 100px;
+                            object-fit: cover;
+                            border-radius: 5px;
+                        }
+                    }
+                }
+            }
+        }
+
+        .modal-footer {
+            border-top: 1px solid white;
         }
     }
 }
@@ -231,7 +261,7 @@ body {
         content: "";
         width: 30px;
         height: 30px;
-        background-image: url('../images/home.png');
+        background-image: url('../images/heart.png');
         background-size: cover;
         top: 110px;
         left: 50%;
@@ -241,11 +271,11 @@ body {
 
 @keyframes fly {
     0% {
-        transform: translateY(100vh);
+        transform: translateY(10vh);
     }
 
     100% {
-        transform: translateY(-100vh);
+        transform: translateY(-120vh);
     }
 }
 
@@ -320,5 +350,21 @@ body {
                 }
             }
         }
+    }
+}
+
+.ripple {
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: rippleEffect 10s linear;
+    pointer-events: none;
+    opacity: .5;
+}
+
+@keyframes rippleEffect {
+    to {
+        transform: scale(4);
+        opacity: 0;
     }
 }
