--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,18 @@ body {
     }
 }
 
+
+@media screen and (max-width:575px) {
+    .header.row{
+        display: flex;
+        flex-direction: column-reverse;
+        .image {
+            img {
+                height: 250px !important;
+            }
+        }
+    }
+}
 .ripple {
     position: absolute;
     border-radius: 50%;
